--- a/IndexStuff.css
+++ b/IndexStuff.css
@@ -4,20 +4,20 @@ body {
     margin: 0px;
     border: 0px;
     padding: 0px;
-}
+} /* Viewer port, & body background.  Setting margin/border/padding for the rest. */
 .portal {
     width: 1280px;
-}
+} /* Size control for the body & 'background' - Temp One size for now. */
 .jump {
     height: 720px;
-}
+} /* Control for the 'background' to the overall play areas, height wise */
 #Play {
     position: absolute;
     top: 10px;
     left: 10px;
     width: 940px;
     height: 600px;
-}
+} /* Play area, Absolute positioned, functional size needs to be properly dividable by a grid */
 #Stat {
     background-color: white;
     position: absolute;
@@ -25,7 +25,7 @@ body {
     left: 960px;
     width: 310px;
     height: 600px;
-}
+} /* Setting for the Stat are, (Not yet in use, other then the blank space for layout) */
 #Hist{
     background-color: white;
     position: absolute;
@@ -33,17 +33,15 @@ body {
     left: 10px;
     width: 1260px;
     height: 100px;
-}
+} /* Setting for a 'History area', (Not yet in use, other then the blank spacke for layout) */
 .Tile {
     position: inherit;
     width: 10%;
     height: 10%;
 /*    background: linear-gradient(180deg, #122536, rgba(22, 57, 85, 1));  */
-}
+} /* Class for Divs to divide up the 'play' area */
 .hold {
     width: 100%;
     height: 100%;
-}
-.Derp {
-    color: blue;
-}
+} /* Img tags for the play area */
+
